--- a/.github/workflows/TestAndDeploy.yml
+++ b/.github/workflows/TestAndDeploy.yml
@@ -35,8 +35,7 @@ jobs:
               port: ${{ secrets.PORT }}
               script: |
                 export PATH=$PATH:/home/${{ secrets.USER_NAME }}/.local/bin/
-                mkdir /srv/fastapi_project/
-                cd /srv/fastapi_project/
+                cd /srv/fastapi_project/fastapi_project
                 
                 echo '=========basic env==========='
                 # uv --version
@@ -45,11 +44,11 @@ jobs:
                 # ps -p 1 -o comm=
                 # systemctl --version
                 # echo '=======start deploy pull "from main" ==========='
-                git clone https://github.com/bigblackhat-cpu/fastapi_project.git
+                git pull
                 # cd ./fastapi_project/
                 # echo '=======uv sync==========='
                 
-                # uv sync --index-url https://pypi.tuna.tsinghua.edu.cn/simple
+                uv sync --index-url https://pypi.tuna.tsinghua.edu.cn/simple
                 echo '=======启动服务==========='
                 # sudo systemctl restart fastapi_ocr.service
                 echo '=======服务状态==========='
