--- a/.github/workflows/TestAndDeploy.yml
+++ b/.github/workflows/TestAndDeploy.yml
@@ -34,7 +34,7 @@ jobs:
               password: ${{ secrets.PASSWORD }}
               port: ${{ secrets.PORT }}
               script: |
-                export PATH=$PATH:/home/${{ secrets.USER_NAME }}/.local/bin/
+                export PATH=$PATH:/root/.local/bin/uv
                 cd /srv/fastapi_project/fastapi_project
                 
                 echo '=========basic env==========='
