--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -7,19 +7,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  Test:
-    runs-on: ubuntu-latest
-    environment: anything
-    if: |
-      github.event_name == 'pull_request' || 
-      github.event_name == 'workflow_dispatch'
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      - name: just test
-        run: echo "test over"
-
   Deploy:
         runs-on: ubuntu-latest
         environment: bbh_server
@@ -50,8 +37,15 @@ jobs:
                 
                 uv sync --index-url https://pypi.tuna.tsinghua.edu.cn/simple
                 echo '=======启动服务==========='
-                # sudo systemctl restart fastapi_ocr.service
+
+                sudo systemctl restart fastapi_ocr.service
+                sudo systemctl restart celery_work.service
+
+
+
                 echo '=======服务状态==========='
-                # sudo systemctl status fastapi_ocr.service
-                echo "pull over waiting systemctl config..."
+                sudo systemctl status fastapi_ocr.service
+                sudo systemctl status celery_work.service
+                
+                echo "over deploy "
 
