--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "celery>=5.6.0",
     "fastapi[standard]>=0.124.4",
+    "pip>=25.3",
     "python-dotenv>=1.2.1",
     "redis>=7.1.0",
 ]
